# AiSD

AiS_Lab4/: AiS_Lab4.vcxproj  AiS_Lab4.vcxproj.filters  CMakeLists.txt
AiS_Lab4/Debug/: AiS_Lab4.exe.recipe  vc142.idb
AiS_Lab4/Debug/AiS_Lab4.tlog/: AiS_Lab4.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
AiS_Lab4/List_lib/: CMakeLists.txt  List.h
AiS_Lab4/Monom_lib/: CMakeLists.txt  Monom.h
AiS_Lab4/Polynom_lib/: CMakeLists.txt  Polynom.h
AiS_Lab4/example/: CMakeLists.txt  Example.cpp
AiS_Lab4/gtest/: CMakeLists.txt
AiS_Lab4/sln/: ALL_BUILD.vcxproj  CMakeCache.txt  Polynoms.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
AiS_Lab4/sln/List_lib/: List_lib.vcxproj  List_lib.vcxproj.filters  cmake_install.cmake
AiS_Lab4/sln/List_lib/Debug/: List_lib.lib
AiS_Lab4/sln/Monom_lib/: Monom_lib.vcxproj  Monom_lib.vcxproj.filters  cmake_install.cmake
AiS_Lab4/sln/Monom_lib/Debug/: Monom_lib.lib
AiS_Lab4/sln/Polynom_lib/: Polynom_lib.vcxproj  Polynom_lib.vcxproj.filters  cmake_install.cmake
AiS_Lab4/sln/Polynom_lib/Debug/: Polynom_lib.lib
AiS_Lab4/sln/example/: cmake_install.cmake  example.vcxproj  example.vcxproj.filters
AiS_Lab4/sln/example/Debug/: example.ilk
AiS_Lab4/sln/gtest/: cmake_install.cmake  gtest.vcxproj  gtest.vcxproj.filters
AiS_Lab4/sln/gtest/Debug/: gtest.lib
AiS_Lab4/sln/test/: cmake_install.cmake  test_main.vcxproj  test_main.vcxproj.filters
AiS_Lab4/sln/test/Debug/: test_main.ilk
AiS_Lab4/test/: test.cpp
(+61 files in other folders)
